# Simple-DL-lib

./: README.md  conv.py  dropout.py  losses.py  main.py  network.py  pyproject.toml  train.py
lincoln3/: activations.py  base.py  conv.py  dense.py  layers.py  losses.py  main.py  network.py  optimizers.py  train.py
lincoln3_stable/: line_search_demo.py  optimizers.py  test.py
src/simpleDL/: activations.py  base.py  conv.py  dense.py  dropout.py  layers.py  losses.py  network.py  optimizers.py  reshape.py  train.py
src/simpleDL/utils/: mnist.py
utils/: np_utils.py
